styles.scss
@import "normalize.css";

html,
body {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-overflow-scrolling: touch;
  -webkit-font-smoothing: antialiased;
  background-color: #FFFFFF;
}

* {
  box-sizing: border-box;
}

// #trajectoryGUI {
// }

.main-container {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
}

.col {
  width: 50%;
}

.left-col {
  position: relative;
  border-left: 1px solid #eee;
}

.trigger-label {
  font-size: 14px;
}

